--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,24 +15,24 @@ jobs:
     name: Build test
     if: github.event_name != 'push'
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - run: npx @dappnode/dappnodesdk build --skip_save
       
-  e2e-test:
-    runs-on: mainnet
-    needs: build-test
-    if: github.event_name != 'push'
-    name: End to end tests
-    steps:
-      - uses: actions/checkout@v3
-      - run: npx @dappnode/dappnodesdk@latest github-action test-end-to-end --errorLogsTimeout 120 --healthCheckUrl http://besu.public.dappnode:8545 --network mainnet
+  # e2e-test:
+  #   runs-on: mainnet
+  #   needs: build-test
+  #   if: github.event_name != 'push'
+  #   name: End to end tests
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - run: npx @dappnode/dappnodesdk@latest github-action test-end-to-end --errorLogsTimeout 120 --healthCheckUrl http://besu.public.dappnode:8545 --network mainnet
 
   release:
     name: Release
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Publish
         run: npx @dappnode/dappnodesdk publish patch --dappnode_team_preset
         env:
