--- a/package_variants/holesky/docker-compose.yml
+++ b/package_variants/holesky/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       args:
         NETWORK: holesky
+        P2P_PORT: 30415
     ports:
       - 30415:30415/tcp
       - 30415:30415/udp
