Use staker scripts

--- a/besu/Dockerfile
+++ b/besu/Dockerfile
@@ -4,6 +4,7 @@ FROM hyperledger/besu:${UPSTREAM_VERSION}
 
 ARG NETWORK
 ARG P2P_PORT
+ARG STAKER_SCRIPTS_VERSION
 
 COPY security /security
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
@@ -28,7 +29,12 @@ ENV BESU_RPC_WS_HOST=0.0.0.0 \
     BESU_METRICS_HOST=0.0.0.0 \
     BESU_DATA_PATH=/var/lib/besu \
     NETWORK=${NETWORK} \
-    P2P_PORT=${P2P_PORT}
+    P2P_PORT=${P2P_PORT} \
+    STAKER_SCRIPTS_URL=https://github.com/dappnode/staker-package-scripts/releases/download/${STAKER_SCRIPTS_VERSION}
+
+ADD ${STAKER_SCRIPTS_URL}/execution_tools.sh /etc/profile.d/
+
+RUN chmod +rx /usr/local/bin/entrypoint.sh /etc/profile.d/execution_tools.sh
 
 USER besu
 
