--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -4,6 +4,11 @@
       "version": "24.6.0",
       "repo": "hyperledger/besu",
       "arg": "UPSTREAM_VERSION"
+    },
+    {
+      "repo": "dappnode/staker-package-scripts",
+      "version": "v0.1.0",
+      "arg": "STAKER_SCRIPTS_VERSION"
     }
   ],
   "shortDescription": "Besu is an Apache 2.0 licensed, MainNet compatible, Ethereum client written in Java.",
