Use latest staker scripts version

--- a/besu/Dockerfile
+++ b/besu/Dockerfile
@@ -5,17 +5,7 @@ FROM hyperledger/besu:${UPSTREAM_VERSION}
 ARG NETWORK
 ARG P2P_PORT
 ARG STAKER_SCRIPTS_VERSION
-
-COPY security /security
-COPY entrypoint.sh /usr/local/bin/entrypoint.sh
-
-USER root
-
-# curl install throws error in ARM64 arch. It should not prevent build
-RUN apt update && apt install -y curl || true
-
-RUN mkdir /var/lib/besu
-RUN chown -R besu:besu /var/lib/besu
+ARG DATA_DIR
 
 ENV BESU_RPC_WS_HOST=0.0.0.0 \
     BESU_RPC_HTTP_HOST=0.0.0.0 \
@@ -27,15 +17,28 @@ ENV BESU_RPC_WS_HOST=0.0.0.0 \
     BESU_ENGINE_RPC_ENABLED=true \
     BESU_METRICS_ENABLED=true \
     BESU_METRICS_HOST=0.0.0.0 \
-    BESU_DATA_PATH=/var/lib/besu \
-    NETWORK=${NETWORK} \
+    BESU_DATA_PATH=${DATA_DIR} \
     P2P_PORT=${P2P_PORT} \
+    SECURITY_PATH=/security \
     STAKER_SCRIPTS_URL=https://github.com/dappnode/staker-package-scripts/releases/download/${STAKER_SCRIPTS_VERSION}
 
 ADD ${STAKER_SCRIPTS_URL}/execution_tools.sh /etc/profile.d/
 
-RUN chmod +rx /usr/local/bin/entrypoint.sh /etc/profile.d/execution_tools.sh
+COPY security ${SECURITY_PATH}
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+
+USER root
+
+# curl install throws error in ARM64 arch. It should not prevent build
+RUN apt-get update && apt-get --no-install-recommends --yes install curl && apt-get clean || true
+
+RUN mkdir ${DATA_DIR} && chown -R besu:besu ${DATA_DIR} && \
+    chmod +rx /usr/local/bin/entrypoint.sh /etc/profile.d/execution_tools.sh
 
 USER besu
+
+# This env changes the variant
+# Placed at the end to regenerate the least amount of layers
+ENV NETWORK=${NETWORK}
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
