--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -26,5 +26,6 @@
     "type": "git",
     "url": "https://github.com/dappnode/DAppNodePackage-besu-generic.git"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "minimumDappnodeVersion": "0.2.95"
 }
