--- a/package_variants/holesky/dappnode_package.json
+++ b/package_variants/holesky/dappnode_package.json
@@ -29,6 +29,13 @@
         "envs": ["CONSENSUS_CLIENT_HOLESKY"],
         "services": ["besu"]
       }
-    ]
+    ],
+    "optionalDependencies": {
+      "lighthouse-holesky.dnp.dappnode.eth": ">=0.1.3",
+      "prysm-holesky.dnp.dappnode.eth": ">=0.1.4",
+      "teku-holesky.dnp.dappnode.eth": ">=0.1.3",
+      "nimbus-holesky.dnp.dappnode.eth": ">=0.1.4",
+      "lodestar-holesky.dnp.dappnode.eth": ">=0.1.8"
+    }
   }
   
