--- a/package_variants/mainnet/dappnode_package.json
+++ b/package_variants/mainnet/dappnode_package.json
@@ -29,6 +29,13 @@
         "envs": ["CONSENSUS_CLIENT_MAINNET"],
         "services": ["besu"]
       }
-    ]
+    ],
+    "optionalDependencies": {
+      "lighthouse.dnp.dappnode.eth": ">=1.0.12",
+      "prysm.dnp.dappnode.eth": ">=3.0.16",
+      "teku.dnp.dappnode.eth": ">=2.0.13",
+      "nimbus.dnp.dappnode.eth": ">=1.0.14",
+      "lodestar.dnp.dappnode.eth": ">=0.1.18"
+    }
   }
   
