--- a/package_variants/holesky/dappnode_package.json
+++ b/package_variants/holesky/dappnode_package.json
@@ -24,11 +24,12 @@
       "homepage": "https://github.com/hyperledger/besu",
       "docs": "https://besu.hyperledger.org/en/stable/"
     },
-    "globalEnvs": [
-      {
-        "envs": ["CONSENSUS_CLIENT_HOLESKY"],
-        "services": ["besu"]
-      }
-    ]
+    "optionalDependencies": {
+      "lighthouse-holesky.dnp.dappnode.eth": ">=0.1.3",
+      "prysm-holesky.dnp.dappnode.eth": ">=0.1.4",
+      "teku-holesky.dnp.dappnode.eth": ">=0.1.3",
+      "nimbus-holesky.dnp.dappnode.eth": ">=0.1.4",
+      "lodestar-holesky.dnp.dappnode.eth": ">=0.1.8"
+    }
   }
   
