--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -27,5 +27,7 @@
     "url": "https://github.com/dappnode/DAppNodePackage-besu-generic.git"
   },
   "license": "Apache-2.0",
-  "minimumDappnodeVersion": "0.2.95"
+  "requirements": {
+    "minimumDappnodeVersion": "0.2.95"
+  }
 }
