update requirements in root

--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -26,5 +26,8 @@
     "type": "git",
     "url": "https://github.com/dappnode/DAppNodePackage-besu-generic.git"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "requirements": {
+    "minimumDappnodeVersion": "0.2.101"
+  }
 }
