--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build:
       context: besu
       args:
-        UPSTREAM_VERSION: 25.2.1
-        STAKER_SCRIPTS_VERSION: v0.1.1
+        UPSTREAM_VERSION: 25.3.0
+        STAKER_SCRIPTS_VERSION: 0.1.2
         DATA_DIR: /var/lib/besu
     volumes:
       - data:/var/lib/besu
