--- a/package_variants/hoodi/hoodi-notifications.yaml
+++ b/package_variants/hoodi/hoodi-notifications.yaml
@@ -49,7 +49,7 @@ endpoints:
     alerts:
       - type: custom
         enabled: true
-        description: "Besu Hoodi Node peers count"
+        description: "Besu Hoodi Node peers count is below [CONDITION_VALUE]"
         failure-threshold: 10
         success-threshold: 1
         send-on-resolved: true
